
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct Error_Map {int Error_Code; char* Error_String; } ;


 struct Error_Map* IOC_SCSITMType ;
 int snprintf (char*,int,char*,int) ;

__attribute__((used)) static char *
mpt_scsi_tm_type(int code)
{
 const struct Error_Map *status = IOC_SCSITMType;
 static char buf[64];
 while (status->Error_Code >= 0) {
  if (status->Error_Code == code)
   return status->Error_String;
  status++;
 }
 snprintf(buf, sizeof buf, "Unknown (0x%08x)", code);
 return buf;
}
